// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/comment/demo/basic.md correctly 1`] = `
<div
  class="ant-comment"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-header"
    >
      <span
        class="ant-comment-header-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            alt="Han Solo"
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </span>
      <div
        class="ant-comment-header-author"
      >
        <span
          class="ant-comment-header-author-name"
        >
          <a>
            Han Solo
          </a>
        </span>
        <span
          class="ant-comment-header-author-time ant-comment-header-author-time-tooltip"
        >
          a few seconds ago
        </span>
      </div>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-detail"
      >
        <p>
          Sagittis id consectetur purus ut faucibus pulvinar elementum integer enim. Pellentesque massa placerat duis ultricies lacus sed turpis. Tempus urna et pharetra pharetra massa massa.
        </p>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <span>
            <span>
              <i
                class="anticon anticon-like"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="like"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 0 0-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 0 0 471 99.9c-52 0-98 35-111.8 85.1l-85.9 311h-.3v428h472.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM112 528v364c0 17.7 14.3 32 32 32h65V496h-65c-17.7 0-32 14.3-32 32z"
                  />
                </svg>
              </i>
              <span
                style="padding-left:8px;cursor:auto"
              >
                0
              </span>
            </span>
          </span>
        </li>
        <li>
          <span>
            <span>
              <i
                class="anticon anticon-dislike"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="dislike"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M885.9 490.3c3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-28.3-9.3-55.5-26.1-77.7 3.6-12 5.4-24.4 5.4-37 0-51.6-30.7-98.1-78.3-118.4a66.1 66.1 0 0 0-26.5-5.4H273v428h.3l85.8 310.8C372.9 889 418.9 924 470.9 924c29.7 0 57.4-11.8 77.9-33.4 20.5-21.5 31-49.7 29.5-79.4l-6-122.9h239.9c12.1 0 23.9-3.2 34.3-9.3 40.4-23.5 65.5-66.1 65.5-111 0-28.3-9.3-55.5-26.1-77.7zM112 132v364c0 17.7 14.3 32 32 32h65V100h-65c-17.7 0-32 14.3-32 32z"
                  />
                </svg>
              </i>
              <span
                style="padding-left:8px;cursor:auto"
              >
                0
              </span>
            </span>
          </span>
        </li>
        <li>
          <span>
            <span>
              Reply to
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/editor.md correctly 1`] = `
<div
  class="ant-comment-editor"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-header"
    >
      <span
        class="ant-comment-header-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            alt="Han Solo"
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-wrapper"
      >
        <form
          class="ant-form ant-form-horizontal"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-form-item-control-wrapper"
            >
              <div
                class="ant-form-item-control"
              >
                <span
                  class="ant-form-item-children"
                >
                  <textarea
                    class="ant-input"
                    data-__field="[object Object]"
                    data-__meta="[object Object]"
                    id="message"
                    rows="4"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-form-item-control-wrapper"
            >
              <div
                class="ant-form-item-control"
              >
                <span
                  class="ant-form-item-children"
                >
                  <button
                    class="ant-btn ant-btn-primary"
                    type="submit"
                  >
                    <i
                      class="anticon anticon-message"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="message"
                        fill="currentColor"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M464 512a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm200 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm-400 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 0 0-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 0 0-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 0 0 112 714v152a46 46 0 0 0 46 46h152.1A449.4 449.4 0 0 0 510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 0 0 142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                        />
                      </svg>
                    </i>
                    <span>
                      Add Comment
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/list.md correctly 1`] = `
<div
  class="ant-list comment-list ant-list-split"
>
  <div
    class="ant-list-header"
  >
    2 replies
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-header"
          >
            <span
              class="ant-comment-header-avatar"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
            <div
              class="ant-comment-header-author"
            >
              <span
                class="ant-comment-header-author-name"
              >
                Han Solo
              </span>
              <span
                class="ant-comment-header-author-time ant-comment-header-author-time-tooltip"
              >
                a day ago
              </span>
            </div>
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-detail"
            >
              <p>
                Nisl nisi scelerisque eu ultrices vitae auctor eu augue. Nulla at volutpat diam ut venenatis tellus in metus vulputate.
              </p>
            </div>
            <ul
              class="ant-comment-actions"
            >
              <li>
                <span>
                  <span>
                    Reply to
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-header"
          >
            <span
              class="ant-comment-header-avatar"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
            <div
              class="ant-comment-header-author"
            >
              <span
                class="ant-comment-header-author-name"
              >
                Stormtrooper
              </span>
              <span
                class="ant-comment-header-author-time ant-comment-header-author-time-tooltip"
              >
                2 days ago
              </span>
            </div>
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-detail"
            >
              <p>
                Sed turpis tincidunt id aliquet risus feugiat in ante metus. Faucibus nisl tincidunt eget nullam non.
              </p>
            </div>
            <ul
              class="ant-comment-actions"
            >
              <li>
                <span>
                  <span>
                    Reply to
                  </span>
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/nested.md correctly 1`] = `
Array [
  <div
    class="ant-comment"
  >
    <div
      class="ant-comment-inner"
    >
      <div
        class="ant-comment-header"
      >
        <span
          class="ant-comment-header-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              alt="Han Solo"
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </span>
        <div
          class="ant-comment-header-author"
        >
          <span
            class="ant-comment-header-author-name"
          >
            <a>
              Han Solo
            </a>
          </span>
          <span
            class="ant-comment-header-author-time"
          >
            a few seconds ago
          </span>
        </div>
      </div>
      <div
        class="ant-comment-content"
      >
        <div
          class="ant-comment-content-detail"
        >
          <p>
            Sagittis id consectetur purus ut faucibus pulvinar elementum integer enim. Pellentesque massa placerat duis ultricies lacus sed turpis. Tempus urna et pharetra pharetra massa massa.
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-comment-nested"
  >
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-header"
        >
          <span
            class="ant-comment-header-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                alt="Han Solo"
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </span>
          <div
            class="ant-comment-header-author"
          >
            <span
              class="ant-comment-header-author-name"
            >
              <a>
                Han Solo
              </a>
            </span>
            <span
              class="ant-comment-header-author-time"
            >
              a few seconds ago
            </span>
          </div>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <p>
              Sagittis id consectetur purus ut faucibus pulvinar elementum integer enim. Pellentesque massa placerat duis ultricies lacus sed turpis. Tempus urna et pharetra pharetra massa massa.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-comment-nested"
    >
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-header"
          >
            <span
              class="ant-comment-header-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  alt="Han Solo"
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </span>
            <div
              class="ant-comment-header-author"
            >
              <span
                class="ant-comment-header-author-name"
              >
                <a>
                  Han Solo
                </a>
              </span>
              <span
                class="ant-comment-header-author-time"
              >
                a few seconds ago
              </span>
            </div>
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-detail"
            >
              <p>
                Sagittis id consectetur purus ut faucibus pulvinar elementum integer enim. Pellentesque massa placerat duis ultricies lacus sed turpis. Tempus urna et pharetra pharetra massa massa.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
